# aim-sample

mil-std-1553-linux-bsp-15.3.0/: install.sh  sample
mil-std-1553-linux-bsp-15.3.0/Onboard-SW/: update.sh
mil-std-1553-linux-bsp-15.3.0/Onboard-SW/update-components/: BIP_1010.sre  BIP_1012.sre  BIP_1014.sre  BIP_1016.sre  FLANE_MLCA1110.sre  MLCA1110.sre  update.upd
mil-std-1553-linux-bsp-15.3.0/add-ons/Net-Detection-Tool/: libQt5DBus.so.5.12.12  libQt5XcbQpa.so.5.12  libQt5XcbQpa.so.5.12.12  net-detection-tool  net-detection-tool.sh
mil-std-1553-linux-bsp-15.3.0/add-ons/bsp_tool/: aim_mil_bsp_tool-15.3.0-py3-none-any.whl
mil-std-1553-linux-bsp-15.3.0/add-ons/python/: aim_mil-24.22.0-py3-none-any.whl
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/.reuse/: dep5
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/include/: ANS_AdminCommands.h  ANS_Board.h  ANS_BoardCommands.h  ANS_Client.h  ANS_ClientPeer.h  ANS_CmdFrame.h  ANS_Connection.h  ANS_Header.h  ANS_LinkInitFrame.h  ANS_Log.h  ANS_MemChunk.h  ANS_Protocol.h  ANS_Server.h  ANS_ServerPeer.h  ANS_Startup.h  ANS_Thread.h  ANS_Types.h  Ai_Log.h  Ai_Logdef.h  Ai_NotUsed.h  Ai_Opterror.h  Ai_Opthelp.h  Ai_Options.h  Ai_Socket.h
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/include/mil/: ANS1553_BoardCommands.h  ANS1553_CommonSettings.h  ANS1553_ProtocolCommands.h
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/src/: ANS_AdminWorker.c  ANS_AdminWorker.h  ANS_Board.c  ANS_BoardWorker.c  ANS_BoardWorker.h  ANS_Client.c  ANS_ClientPeer.c  ANS_CmdFrame.c  ANS_Config.h  ANS_Connection.c  ANS_Frame.c  ANS_Frame.h  ANS_Header.c  ANS_LinkInitFrame.c  ANS_Log.c  ANS_MemChunk.c  ANS_Multiplexer.c  ANS_Multiplexer.h  ANS_Protocol.c  ANS_Server.c  ANS_ServerPeer.c  ANS_Startup.c  ANS_Thread.c  Ai_Cmdline.c  Ai_Cmdline.h  Ai_Date.c  Ai_Date.h  Ai_Defines.h  Ai_Log.c  Ai_Logclt.h  Ai_Logindex.c  Ai_Logindex.h  Ai_Logsrv.h  Ai_Opterror.c  Ai_Options.c  Ai_Sem.c  Ai_Sem.h  Ai_Socket.c  Ai_Sockll.c  Ai_Sockll.h  (+14 more)
mil-std-1553-linux-bsp-15.3.0/src/ANS-Common/src/.deps/: libans_common_a-ANS_AdminWorker.Po  libans_common_a-ANS_Board.Po  libans_common_a-ANS_BoardWorker.Po  libans_common_a-ANS_Client.Po  libans_common_a-ANS_ClientPeer.Po  libans_common_a-ANS_CmdFrame.Po  libans_common_a-ANS_Connection.Po  libans_common_a-ANS_Frame.Po  libans_common_a-ANS_Header.Po  libans_common_a-ANS_LinkInitFrame.Po  libans_common_a-ANS_Log.Po  libans_common_a-ANS_MemChunk.Po  libans_common_a-ANS_Multiplexer.Po  libans_common_a-ANS_Protocol.Po  libans_common_a-ANS_Server.Po  libans_common_a-ANS_ServerPeer.Po  libans_common_a-ANS_Startup.Po  libans_common_a-ANS_Thread.Po  libans_common_a-Ai_Cmdline.Po  libans_common_a-Ai_Date.Po  libans_common_a-Ai_Log.Po  libans_common_a-Ai_Logindex.Po  libans_common_a-Ai_Opterror.Po  libans_common_a-Ai_Options.Po  libans_common_a-Ai_Sem.Po  libans_common_a-Ai_Socket.Po  libans_common_a-Ai_Sockll.Po  libans_common_a-Ai_Socksv.Po  libans_common_a-Ai_Socktl.Po  libans_common_a-Ai_Strdup.Po  libans_common_a-Ai_Strncpy.Po  libans_common_a-Ai_Time.Po
mil-std-1553-linux-bsp-15.3.0/src/Smart/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
mil-std-1553-linux-bsp-15.3.0/src/Smart/.reuse/: dep5
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartCon/: Makefile  Makefile.am  Makefile.in
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartCon/src/: Makefile  Makefile.am  Makefile.in  SmartCon.c  SmartCon.rc  SmartConVersion.h  SmartConVxWorks1553.c  SmartConVxWorks429.c  SmartConVxWorks485.c  resource.h
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartCon/src/.deps/: SmartCon-SmartCon.Po
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartLib/: Makefile  Makefile.am  Makefile.in
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartLib/include/: SmartLib.h  SmartNvr.h  Wrapper.h
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartLib/src/: AiArtix7Mon.c  AiMyMon.c  Makefile  Makefile.am  Makefile.in  S0Handling.c  S0Handling.h  SmartAIM.c  SmartAyE.c  SmartAyE.h  SmartBat.c  SmartLib.c  SmartLibAutoUpdateNone.c  SmartLibAutoUpdateWindows.c  SmartUpd.c  SmartUpd.h  SmrtFile.c  SmrtFile.h  WrapList.c  WrapList.h  resource.h
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartLib/src/.deps/: libsmart_a-AiArtix7Mon.Po  libsmart_a-AiMyMon.Po  libsmart_a-Mil_Wrap.Po  libsmart_a-S0Handling.Po  libsmart_a-SmartAIM.Po  libsmart_a-SmartAyE.Po  libsmart_a-SmartBat.Po  libsmart_a-SmartLib.Po  libsmart_a-SmartLibAutoUpdateNone.Po  libsmart_a-SmartUpd.Po  libsmart_a-SmrtFile.Po  libsmart_a-WrapList.Po
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartLib/src/aim485ah/: Aim485Ah_Wrap.c
mil-std-1553-linux-bsp-15.3.0/src/Smart/SmartLib/src/mil/: Mil_Wrap.c  Mil_Wrap.dummyAVX3910.c  Mil_Wrap.h
mil-std-1553-linux-bsp-15.3.0/src/Smart/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
mil-std-1553-linux-bsp-15.3.0/src/Smart/scripts/: generate_version_file.bat  generate_version_file.sh  setlocalversion.sh
mil-std-1553-linux-bsp-15.3.0/src/ans1553/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
mil-std-1553-linux-bsp-15.3.0/src/ans1553/.reuse/: dep5
mil-std-1553-linux-bsp-15.3.0/src/ans1553/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
mil-std-1553-linux-bsp-15.3.0/src/ans1553/scripts/: setlocalversion  setlocalversionwin.sh
mil-std-1553-linux-bsp-15.3.0/src/ans1553/src/: ANS1553  ANS1553.c  ANS1553_Version.h  BoardCommandHandlers.c  BoardCommandHandlers.h  BoardProtocolHandlers.c  BoardProtocolHandlers.h  Makefile  Makefile.am  Makefile.in  S98ANS1553  resource.h
mil-std-1553-linux-bsp-15.3.0/src/ans1553/src/.deps/: ANS1553-ANS1553.Po  ANS1553-BoardCommandHandlers.Po  ANS1553-BoardProtocolHandlers.Po
mil-std-1553-linux-bsp-15.3.0/src/tsw/: .Module.symvers.cmd  .libaim_mil_tsw.ko.cmd  .libaim_mil_tsw.mod.cmd  (+8 more)
(+368 files in other folders)
