# SPDX-FileCopyrightText: 2013-2021 AIM GmbH <info@aim-online.com>
# SPDX-License-Identifier: MIT  

dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ANS-Common, 1.0, support@aim-online.com)


AC_CANONICAL_SYSTEM

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_RANLIB

AM_PROG_CC_C_O

AC_ARG_VAR(AIM_BSP_COMMON, [Path to AIM-BSP-Common Repository])


AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

